--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "build:dnas": "npm run build:zomes && hc dna pack ./dnas/sensemaker/workdir && hc dna pack ./dnas/test_provider/workdir",
     "build:zomes": "CARGO_TARGET_DIR=target cargo build --release --target wasm32-unknown-unknown",
     "build:client": "npm run build -w client",
+    "clean": "npm run clean:modules",
+    "clean:modules": "rimraf node_modules; for DIR in $(find -type d -iname node_modules); do echo \"  Remove $DIR\"; rm -Rf \"$DIR\"; done",
     "playground": "run-singleton \"holochain-playground\""
   },
   "devDependencies": {
