--- a/package.json
+++ b/package.json
@@ -1,22 +1,20 @@
 {
   "name": "sensemaker_happ-dev",
   "private": true,
-  "workspaces": [
-    "ui",
-    "tests",
-    "client"
-  ],
   "scripts": {
-    "start": "npm run network 2",
-    "network": "hc s clean && npm run build:happ && concurrently-repeat \"npm run start:agent\"",
-    "start:agent": "cross-env HC_PORT=$(port) concurrently -k \"npm run start:happ\" \"sleep 5 && npm run start -w ui\"",
-    "test": "npm run build:happ && npm run build:client && npm t -w tests",
-    "start:happ": "concurrently \"RUST_LOG=warn echo \"pass\" | hc s --piped generate ./workdir/sensemaker_happ.happ --run=$HC_PORT -a sensemaker_happ network mdns\" \"npm run playground\"",
-    "package": "npm run build:happ && npm run package -w ui && hc web-app pack workdir",
-    "build:happ": "npm run build:dnas && hc app pack ./workdir",
-    "build:dnas": "npm run build:zomes && hc dna pack ./dnas/sensemaker/workdir && hc dna pack ./dnas/test_provider/workdir",
+    "preinstall": "npx only-allow pnpm",
+    "start": "pnpm run network 2",
+    "network": "hc s clean && pnpm run build:happ && concurrently-repeat \"pnpm run start:agent\"",
+    "start:agent": "cross-env HC_PORT=$(port) concurrently -k \"pnpm run start:happ\" \"sleep 5 && cd ui && pnpm run start\"",
+    "test": "pnpm run build:happ && pnpm run build:client && cd tests && npm t",
+    "start:happ": "concurrently \"RUST_LOG=warn echo \"pass\" | hc s --piped generate ./workdir/sensemaker_happ.happ --run=$HC_PORT -a sensemaker_happ network mdns\" \"pnpm run playground\"",
+    "package": "pnpm run build:happ && hc web-app pack workdir",
+    "build:happ": "pnpm run build:dnas && hc app pack ./workdir",
+    "build:dnas": "pnpm run build:zomes && hc dna pack ./dnas/sensemaker/workdir && hc dna pack ./dnas/test_provider/workdir",
     "build:zomes": "CARGO_TARGET_DIR=target cargo build --release --target wasm32-unknown-unknown",
-    "build:client": "npm run build -w client",
+    "build:client": "cd client && pnpm run build",
+    "clean": "pnpm run clean:modules",
+    "clean:modules": "rimraf node_modules; for DIR in $(find -type d -iname node_modules); do echo \"  Remove $DIR\"; rm -Rf \"$DIR\"; done",
     "playground": "run-singleton \"holochain-playground\""
   },
   "devDependencies": {
