--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "network": "hc s clean && pnpm run build:happ && concurrently-repeat \"pnpm run start:agent\"",
     "start:agent": "cross-env HC_PORT=$(port) concurrently -k \"pnpm run start:happ\" \"sleep 5 && cd ui && pnpm run start\"",
     "test": "pnpm run build:happ && pnpm run build:client && cd tests && npm t",
+    "test:sensemaker": "pnpm run build:happ && pnpm run build:client && cd tests && npm run test:sensemaker",
+    "test:client": "pnpm run build:client && cd tests && npm run test:client",
     "start:happ": "concurrently \"RUST_LOG=warn echo \"pass\" | hc s --piped generate ./workdir/sensemaker_happ.happ --run=$HC_PORT -a sensemaker_happ network mdns\" \"pnpm run playground\"",
     "package": "pnpm run build:happ && hc web-app pack workdir",
     "build:happ": "pnpm run build:dnas && hc app pack ./workdir",
