--- a/client/package.json
+++ b/client/package.json
@@ -17,8 +17,7 @@
   "dependencies": {
     "@holochain/client": "0.12.0",
     "@lit-labs/context": "^0.3.1",
-    "svelte": "^3.59.0",
-    "@msgpack/msgpack": "^2.7.2"
+    "svelte": "^3.59.0"
   },
   "devDependencies": {
     "typescript": "^4.5.0"
