--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test:sensemaker": "pnpm run build:happ && pnpm run build:client && cd tests && npm run test:sensemaker",
     "test:client": "pnpm run build:client && cd tests && npm run test:client",
     "start:happ": "concurrently \"RUST_LOG=warn echo \"pass\" | hc s --piped generate ./workdir/sensemaker_happ.happ --run=$HC_PORT -a sensemaker_happ network mdns\" \"pnpm run playground\"",
-    "package": "pnpm run build:happ && hc web-app pack workdir",
+    "package": "pnpm run build:happ && echo \"TODO SKIP FOR NOW 'hc web-app pack workdir'\"",
     "build:happ": "pnpm run build:dnas && hc app pack ./workdir",
     "build:dnas": "pnpm run build:zomes && hc dna pack ./dnas/sensemaker/workdir && hc dna pack ./dnas/test_provider/workdir",
     "build:zomes": "CARGO_TARGET_DIR=target cargo build --release --target wasm32-unknown-unknown",
