update dependencies for HDK0.2

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ opt-level = "z"
 opt-level = "z"
 
 [workspace.dependencies]
-hdi = { version = "0.2.0" }
-hdk = { version = "0.1.0" }
-serde = "1"
-holochain = {version = "0.1.0"}
+serde = "=1.0.171"
+hdi = "=0.3.1"
+hdk = "=0.2.1"
+holochain = "=0.2.1"
