--- a/client/package.json
+++ b/client/package.json
@@ -17,9 +17,11 @@
   "dependencies": {
     "@holochain/client": "0.12.0",
     "@lit-labs/context": "^0.1.2",
+    "@open-wc/dedupe-mixin": "^1.4.0",
     "@open-wc/scoped-elements": "^2.1.5",
     "lit-svelte-stores": "^0.2.5",
-    "svelte": "^3.59.0"
+    "svelte": "^3.59.0",
+    "lit": "^2.2.0"
   },
   "devDependencies": {
     "typescript": "^4.5.0"
