--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "cross-env": "^7.0.3",
     "new-port-cli": "^1.0.0",
     "rimraf": "^3.0.2",
-    "run-singleton-cli": "^0.0.5"
+    "run-singleton-cli": "^0.0.5",
+    "tslib": "^2.3.1"
   },
   "engines": {
     "npm": ">=7.0.0"
